data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_495.wast
;; 6. **Backwards Branch Mismanagement**: Design a loop with a nested `br` instruction that targets the loop but has a mismanaged backward jump. This should verify that the implementation correctly conducts backward jumps without creating unintended infinite loops.

(assert_invalid
  (module
    (func
      (loop (result i32)
        (block (result i32)
          (br 1)  ;; Intended to cause incorrect backward jump to the loop's beginning
        )
      )
    )
  )
  "type mismatch"
)